added step to insert text in Help field in Service Dialog; made a few edits where I saw the new Automation>Automate path hadn't been updated.

--- a/common/service-dialog-creation-using-dialog-editor.adoc
+++ b/common/service-dialog-creation-using-dialog-editor.adoc
@@ -1,6 +1,6 @@
-{product-title} includes a drag-and-drop service dialog editor to create service dialogs. The editor, with its drag-and-drop feature, provides a visual representation of the components that comprise a service dialog. Easily design your service dialog utilizing dialog tabs, sections (previously referred to as boxes), and elements.
+{product-title} includes a drag-and-drop service dialog editor to create service dialogs. The editor, with its drag-and-drop feature, provides a visual representation of the components that comprise a service dialog. You can easily design your service dialog utilizing dialog tabs, sections (previously referred to as boxes), and elements.
 
-When users access a service, the majority of options available to them are preset and cannot be altered. The requirements for the service determine the options and fields that need to be present in the dialog for user input.  A service dialog exposes some of those options to the user so that even if they are ordering a basic Red Hat Enterprise Linux 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed. See Appendix A. at the end of this document for an example about creating a service for provisioning a virtual machine through Red Hat Virtualization that utilizes a service dialog. 
+When users access a service, the majority of options available to them are preset and cannot be altered. The requirements for the service determine the options and fields that need to be present in the dialog for user input.  A service dialog exposes some of those options to the user so that even if they are ordering a basic Red Hat Enterprise Linux 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed. See xref:example-creating-a-service[] for an example about creating a service for provisioning a virtual machine through Red Hat Virtualization that utilizes a service dialog. 
 
 A service dialog contains three components:
 
@@ -54,6 +54,7 @@ image:edit-section1.png[]
 Element names must correspond to the options used in the provisioning dialog. *Name* must use only alphanumeric characters and underscores without spaces. It is also used to retrieve the value of this element in the method used with the dialog and must start with *dialog_service_type*. 
 ====
 +
+.. Optional: Add additional information in *Help* to assist the user complete the fields in the service dialog. This is useful for explaining unfamiliar terminology or providing configuration tips.
 .. Set other options as required.
 .. Click *Save*.
 . Optional: Repeat the above step to add more elements to the existing section, or create and add elements to a new section as required.
