--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -48,7 +48,7 @@ include::common/remove-dynamic-resource-object.adoc[]
 [[service-dialogs]]
 ==== Service Dialogs
 
-When provisioning a service, input will be needed from the requester. Service dialogs are used to take input from the user. This input is connected to a method in the Automate model that defines how the users input is translated into the provision request. Before creating a service dialog, be sure to plan what items you need the user to input.
+When provisioning a service, input will be needed from the requester. Service dialogs are used to take input from the user. This input is connected to a method in the Automate model that defines how the user's input is translated into the provision request. Before creating a service dialog, be sure to plan what items you need the user to input.
 
 [[adding-a-service-dialog-using-editor]]
 ===== Adding a Service Dialog
@@ -64,7 +64,7 @@ include::common/service-dialog-creation-using-dialog-editor.adoc[]
 
 You can share service dialogs between appliances using the export and import features.
 
-. Navigate to menu:Automate[Customization].
+. Navigate to menu:Automation[Automate > Customization].
 . In the *Import/Export* accordion, click *Service Dialog Import/Export*.
 . In the *Import* area, click *Browse* to select an import file.
 . Click *Upload*.
@@ -74,7 +74,7 @@ You can share service dialogs between appliances using the export and import fea
 
 You can share service dialogs between appliances using the export and import features.
 
-. Navigate to *Automate → Customization*.
+. Navigate to menu:Automation[Automate > Customization].
 . In the *Import/Export* accordion, click *Service Dialog Import/Export*.
 . In the *Export* area, select the service dialogs that you want to export.
 . Click *Export*.
@@ -203,7 +203,7 @@ exit MIQ_OK
 
 Service methods have been split based on purpose.
 
-. Navigate to menu:Automate[Explorer].
+. Navigate to menu:Automation[Automate > Explorer].
 . Service Class is located at menu:DOMAIN[Service > Provisioning > StateMachines > Methods] and menu:Domain[Service > Retirement > StateMachines > Methods].
 +
 [NOTE]
@@ -222,7 +222,7 @@ image:6297.png[]
 [[creating-an-instance-in-the-service-class]]
 ===== Creating an Instance in the Service Class
 
-. Navigate to menu:Automate[Explorer].
+. Navigate to menu:Automation[Automate > Explorer].
 . Service Class is located at menu:DOMAIN[Service > Provisioning > StateMachines > Methods] and menu:Domain[Service > Retirement > StateMachines > Methods].
 +
 [NOTE]
@@ -250,7 +250,7 @@ After the method has been created, it must be mapped to an instance in the `DOMA
 
 Service methods have been split based on purpose.
 
-. Navigate to menu:Automate[Explorer].
+. Navigate to menu:Automation[Automate > Explorer].
 . From the accordion menu, click the required service method.
 . Service Class is located at menu:DOMAIN[Service > Provisioning > StateMachines > Methods] and menu:Domain[Service > Retirement > StateMachines > Methods].
 +
