--- a/common/service-dialog-creation-using-dialog-editor.adoc
+++ b/common/service-dialog-creation-using-dialog-editor.adoc
@@ -54,7 +54,7 @@ image:edit-section1.png[]
 Element names must correspond to the options used in the provisioning dialog. *Name* must use only alphanumeric characters and underscores without spaces. It is also used to retrieve the value of this element in the method used with the dialog and must start with *dialog_service_type*. 
 ====
 +
-.. Optional: Add additional information in *Help* to assist the user complete the fields in the service dialog. This is useful for explaining unfamiliar terminology or providing configuration tips.
+.. Optional: Add additional information in *Help* to assist the user to complete the fields in the service dialog. This field is useful for explaining unfamiliar terminology or providing configuration tips.
 .. Set other options as required.
 .. Click *Save*.
 . Optional: Repeat the above step to add more elements to the existing section, or create and add elements to a new section as required.
