update with sme feedback

--- a/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
+++ b/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
@@ -1,10 +1,10 @@
 [[ansible-playbook-button]]
-= Creating an Ansible Playbook Button
+=== Creating an Ansible Playbook Button
 
-{product_title} includes an option to create an Ansible Playbook type of custom button. This feature allows users to select a playbook to run as well as an inventory target to run it against. An Ansible playbook type button can be defined for any object type available.
+{product-title} includes an option to create an Ansible Playbook custom button. This feature allows users to select a playbook to run as well as an inventory target to run it against. An Ansible playbook type button can be defined for any object type available.
 [NOTE]
 ====
-An Ansible Playbook catalog item must exist in order to create an Ansible Playbook custom button. For more information, see
+An Ansible Playbook catalog item must exist in order to create an Ansible Playbook custom button. For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/provisioning_virtual_machines_and_hosts/catalogs-services#create-playbook-service-catalog-item[Creating an Ansible Playbook Service Catalog Item] in the Provisioning Virtual Machines and Hosts guide.
 ====
 
 . Navigate to menu:Automate[Customization].
@@ -31,5 +31,5 @@ If image:../images/1862.png[image] (*Add a new Button*) is not available, that m
 . Select an *Icon Color* from the  color selection palette that pops up. 
 . Check *Open URL* to open a browser window for the custom URL returned when the playbook is run. 
 . Select display options for the Ansible Playbook button from the *Display for* drop-down menu. Choose for the button to display in the list view, for single entities, or both.
-. Choose how to submit objects to automate by selecting an option from the *Submit* drop-down menu.   
+. Choose how to submit objects to automate by selecting an option from the *Submit* drop-down menu. Selecting *Submit all* will pass all objects at once when the playbook is executed, while choosing *One by one* will run the the playbook each time per object.  
 . Click *Add* when you have confirmed that the button accomplishes the task you want. 
