--- a/doc-Scripting_Actions/topics/chap_invoking_automate.adoc
+++ b/doc-Scripting_Actions/topics/chap_invoking_automate.adoc
@@ -9,6 +9,8 @@ include::To_create_a_custom_button_group1.adoc[]
 
 include::To_create_a_custom_button1.adoc[]
 
+include::To_create_an_Ansible_Playbook_button.adoc[]
+
 include::To_edit_a_custom_button1.adoc[]
 
 include::To_delete_a_custom_button1.adoc[]
