added steps to use the tags expression editor for groups; added screenshot to make it a little more clear; slight reaaranging, and added a link to the Roles table below to make it a little easier for users

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2121,15 +2121,18 @@ To create a user group:
 . Click on the *Access Control* accordion, then click *Groups*.
 . Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add a new Group*) to create a group.
 . Enter a name for the group in the *Name* field. To ensure compatibility with tags, use underscores in place of spaces. For example, {product-title}-`test_group`.
-. Select a *Role* to map to this group.
+. Select a *Role* to map to this group. For a description of each {product-title_short} role, see xref:account-roles-and-descriptions[].
 . Select the *Project/Tenant* this group must belong to.
-. Select any filters that you want applied to what this group can view in the *Assign Filters* area.
-. Check the boxes for the filters you want applied to this user. The items that have changed will show in blue italicized font.
-. Click the *Host & Clusters* tab.
-. Check the boxes for the host and clusters that you want to limit this user to. The items that have changed will show in blue italicized font.
+. Limit what users in this group can view by selecting filters in the *Assign Filters* area. 
+.. Click the *<My Company> Tags* tab to select the tags that users in this group can access. Resources with the selected tags attached can be accessed by this group. Select tags using one of the options in the *This user is limited to* list:
+* Select *Specific Tags*, then check the boxes for the tags that you want to limit this user to. The items that have changed will show in blue italicized font.
+* Select *Tags Based On Expression*, then create tags based on an expression using AND, OR, or NOT. This allows you to further limit the resources accessible to a user: for example, to specify a combination of tags that must exist on a resource.
+image:tag_expression_editor.png[]
+.. Click the *Host & Clusters* tab.
+... Check the boxes for the host and clusters that you want to limit this user to. The items that have changed will show in blue italicized font.
 image:2088.png[]
-. Click the *VMs & Templates* tab. This shows folders that you have created in your virtual infrastructure.
-. Check the boxes for the folders that you want to limit this user to. The items that have changed will show in blue italicized font.
+.. Click the *VMs & Templates* tab. This shows folders that you have created in your virtual infrastructure.
+... Check the boxes for the folders that you want to limit this user to. The items that have changed will show in blue italicized font.
 . Click *Add*.
 
 After creating a group, assign one or more users to the group by editing a user.
