Added period in peer review
Added missing 'the' and period in peer review.

--- a/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
+++ b/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
@@ -20,12 +20,12 @@ image:../images/1862.png[image] (*Add a new Button*).
 +
 [NOTE]
 ====
-If image:../images/1862.png[image] (*Add a new Button*) is not available, that means you have not created a button group for that object. To continue, create a button group first. See <<create-custom-button-group>>
+If image:../images/1862.png[image] (*Add a new Button*) is not available, that means you have not created a button group for that object. To continue, create a button group first. See <<create-custom-button-group>>.
 ====
 
 . Select *Ansible Playbook* from the *Button Type* drop-down menu. 
 . From the *Playbook Catalog Item* choose a playbook-backed catalog item to run.
-. Choose a host from the *Inventory* against which to run the playbook. If *Specific Hosts* is selected, input IP address or DNS names for each host in the text field, separating each with a comma. 
+. Choose a host from the *Inventory* against which to run the playbook. If *Specific Hosts* is selected, input the IP address or DNS names for each host in the text field, separating each with a comma. 
 
 . Type in a *Text* and *Hover Text*, and select the *Icon* you want to use.
 . Select an *Icon Color* from the  color selection palette that pops up. 
