--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -41,3 +41,7 @@ include::common/initial-login-changepw.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
+[[storage-sku-types]]
+=== Storage SKU Types
+include::topics/appendix.adoc[]
