--- a/doc-Scripting_Actions/topics/chap_automation_model.adoc
+++ b/doc-Scripting_Actions/topics/chap_automation_model.adoc
@@ -68,7 +68,7 @@ replacement value in `process#service_id` to the `service_id` attribute.
 === Methods
 
 Methods are pieces of code associated with a class or object to perform
-a task. {product-title} allows for Ruby methods. You can
+a task. {product-title} allows for Ruby methods or backing a method using an Ansible playbook. You can
 create your own methods or use relationships to link to pre-existing
 ones.
 
@@ -86,6 +86,8 @@ life cycle of any gem being referenced in those methods.
 The Release Notes list Ruby gems that have been added, updated, or
 removed in the latest version of {product-title}.
 
+
+
 ifdef::cfme[]
 For lists of Ruby gems included in different {product-title} releases, see:
 
@@ -95,6 +97,9 @@ endif::cfme[]
 include::To_create_a_method1.adoc[]
 
 include::Creating_a_Dynamic_Content_Dialog.adoc[]
+
+include::Ansible_method.adoc[]
+
 
 [[simulation]]
 === Simulation
