Applied SME tech review feedback. Also restructured the section for better flow and readability.

--- a/doc-Monitoring_Alerts_and_Reporting/cfme/master.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/cfme/master.adoc
@@ -28,6 +28,8 @@ include::topics/Alerts.adoc[]
 
 include::topics/Alert_Profiles.adoc[]
 
+include::topics/Integrating_Prometheus_Alerts.adoc[]
+
 include::topics/Importing_and_Exporting.adoc[]
 
 include::topics/RSS.adoc[]
