--- a/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
@@ -6,7 +6,7 @@
 This feature is available with this release of {product-title} as a technology preview only. For more information on the support scope for features marked as technology previews, see https://access.redhat.com/support/offerings/techpreview[Technology Preview Features Support Scope].
 ====
 
-Prometheus is used as an external alerting component. {product-title} integrates Prometheus alerts for use with OpenShift Container Platform. {product-title_short} collects EmsEvents from Prometheus, generates alerts based on these events, and then attaches alerts to inventory objects.
+Prometheus is used as an external alerting component. {product-title_short} integrates Prometheus alerts for use with OpenShift Container Platform. {product-title_short} collects EmsEvents from Prometheus, generates alerts based on these events, and then attaches alerts to inventory objects.
 
 It is possible to view ongoing alerts in {product-title_short} and manage their life cycle, including the ability to:
 
@@ -14,13 +14,18 @@ It is possible to view ongoing alerts in {product-title_short} and manage their 
 * View alert data and related objects.
 * Assign and acknowledge alerts in the alerts list screen.
 
-=== Integrating Prometheus Alerts in {product-title_short}
+=== Configuring Prometheus Alerts in {product-title_short}
 
-Complete the following prerequisite steps on the OpenShift Container Platform:
+Configuring and enabling Prometheus alerts in {product-title_short} comprises the following steps:
 
-. Deploy and Configure Prometheus on OpenShift; see https://docs.openshift.com/container-platform/3.7/install_config/cluster_metrics.html#openshift-prometheus[Prometheus on OpenShift Container Platform].
-. Add Prometheus to an OpenShift cluster and configure alert definitions. 
-.. See intructions below to define alerts (currently has to be done on the Prometheus side):
+. Deploying and configuring Prometheus on OpenShift.
+. Assigning Prometheus alert profiles to the enterprise in {product-title_short}.
+. Adding OpenShift Containers Providers and Prometheus alert endpoints in {product-title_short}.
+
+==== Deploying and Configuring Prometheus on OpenShift
+
+. Deploy Prometheus on OpenShift by following the steps covered in link:https://docs.openshift.com/container-platform/3.7/install_config/cluster_metrics.html#openshift-prometheus[Prometheus on OpenShift Container Platform].
+. Add Prometheus to an OpenShift cluster and configure alert definitions. See the example code block below for configuring alerts (currently must be done on the Prometheus side):
 +
 ----
 $ oc edit configmap -n openshift-metrics prometheus
@@ -33,30 +38,37 @@ $ oc edit configmap -n openshift-metrics prometheus
     - name: example-rules
       interval: 30s # defaults to global interval
       rules:
-      - alert: "Node Down"
+      - alert: "NodeDown"
         expr: up{job="kubernetes-nodes"} == 0
         annotations:
           miqTarget: "ContainerNode"
           severity: "ERROR"
-          url: "https://www.example.com/fixing_instructions"
+          url: "https://www.example.com/node_down_fixing_instructions"
           message: "Node {{$labels.instance}} is down"
+      - alert: "TooManyRequests"
+        expr: rate(authenticated_user_requests[2m]) > 12
+        annotations:
+          miqTarget: "ExtManagementSystem"
+          severity: "ERROR"
+          url: "https://www.example.com/too_many_requests_fixing_instructions"
+          message: "Too many authenticated requests"
 
 ----
 +
 . Reload the Prometheus configuration. You can do this by deleting the Prometheus pod, then redeploying with the new configuration.
 
+==== Assigning Prometheus Alert Profiles to the Enterprise
 
-Complete the following procedure to enable Prometheus alerts in {product-title_short}:
+Complete the following procedure to assign Prometheus alert profiles to the enterprise using the {product-title_short} user interface.
 
-. In the {product-title_short} user interface, navigate to menu:Control[Explorer], then click *Alert Profiles* in the accordion menu.
-+
 [NOTE]
 ====
-Creating a profile is not required since both profiles, Node and Provider, are created automatically during the installation.
+Both Node and Provider alert profiles are created automatically during the installation, so it is not required to create these profiles.
 ====
-+
+
+. Navigate to menu:Control[Explorer], then click *Alert Profiles* in the accordion menu.
 . Click to expand *Node Alert Profiles*, then click *Prometheus Node Profile*. 
-. Click *Configuration*, then click *Edit assignments for this Alert Profile*. Assign the profile to *The Enterprise* from the *Assign To* list.
+. Click image:1847.png[Configuration] (*Configuration*), then click image:1851.png[] (*Edit assignments for this Alert Profile*). Assign the profile to *The Enterprise* from the *Assign To* list.
 . Click *Save*.
 . Click to expand *Provider Alert Profiles*, then click *Prometheus Provider Profile*. 
 . Click *Configuration*, then click *Edit assignments for this Alert Profile*. Assign the profile to *The Enterprise* from the *Assign To* list.
@@ -64,10 +76,55 @@ Creating a profile is not required since both profiles, Node and Provider, are c
 +
 [NOTE]
 ====
-Alerts that were triggered before assigning the profiles to the enterprise will not appear in {product-title_short} at all.
+Alerts triggered before assigning the profiles to the enterprise will not appear in {product-title_short} at all.
 ====
 +
-. Add a Prometheus alerts endpoint.
 
+
+==== Adding OpenShift Containers Providers and Prometheus Alert Endpoints
+
+Complete the following procedure using the {product-title_short} user interface to add OpenShift Containers Provider and Prometheus alerts endpoints.
+
+. Navigate to menu:Compute[Containers > Providers].
+. Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[Add New Containers Provider] (*Add New Containers Provider*).
+. Enter a *Name* for the provider.
+. From the *Type* list, select *OpenShift Container Platform*.
+. Enter the appropriate *Zone* for the provider. If you do not specify a zone, it is set to `default`.
+. From the *Alerts* list, select *Prometheus* to enable external alerts. Selecting *Prometheus* adds an *Alerts* tab to the lower pane to configure the Prometheus service. Alerts are disabled by default.
+. In the *Default* tab, add the default endpoints for the OpenShift provider: 
+.. Select a *Security Protocol* method to specify how to authenticate the provider:
+* *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
+* *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
++
+[NOTE]
+====
+To obtain your OpenShift Container Platform provider's CA certificate, run the `oc get secret` command on your provider, substituting values for your provider and token as needed. To obtain a token for your provider, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_providers/#Obtaining_OpenShift_Container_Platform_Management_Token[Obtaining an OpenShift Container Platform Management Token].
+
+For example:
+
+  # oc get secret --namespace management-infra management-admin-token-8ixxs --template='{{index .data "ca.crt"}}' | base64 --decode
+  
+Paste the output (a block of text starting with `-----BEGIN CERTIFICATE-----`) into the *Trusted CA Certificates* field.
+====
++
+* *SSL without validation*: Authenticate the provider insecurely (not recommended).
+.. Enter the *Hostname* or IPv4 or IPv6 address of the provider.
++
+[IMPORTANT]
+====
+The *Hostname* must use a unique fully qualified domain name.
+====
++
+.. Enter the *API Port* of the provider. The default port is `8443`.
+.. Click *Validate* to confirm that {product-title_short} can connect to the OpenShift Container Platform provider.
+. Add the Prometheus alerts endpoints in the *Alerts* tab:
+.. Select a *Security Protocol* method to specify how to authenticate the service:
+* *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
+* *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
+* *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
+.. Enter the *Hostname* or IPv4 or IPv6 address of the provider. 
+.. Enter the *API Port* if your Prometheus provider uses a non-standard port for access. The default port is `443`.
+.. Click *Validate* to confirm that {product-title_short} can connect to the alerts service.
+. Click *Add*.
 
 
