clarified text for using different types of certs - addl changes

--- a/doc-Appliance_Hardening_Guide/topics/DB_SSL.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/DB_SSL.adoc
@@ -61,6 +61,10 @@ If you are using a self-signed certificate, run:
 +
 If you are using a third-party certificate, install the root certificate by running:
 + 
+[subs="verbatim,attributes"]
+----
+[root@appliance2 ~]# COMMAND NEEDED
+----
 . Make sure that the security context is set correctly for the files in `/var/www/miq/certs`:
 +
 [subs="verbatim,attributes"]
