API 3.0.0 Documentation for the Gaprindashvili Release - Added the new /api/v3.0.0 version history changes

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -5,6 +5,89 @@
 [cols="1,1,1,3",options="header"]
 |=======================================================================
 |API Version |Entry Points |Published |Description
+|*3.0.0* |/api, /api/v3.0.0 |January 2018 |
+Return correct subcollection actions https://github.com/ManageIQ/manageiq-api/pull/243
+Validate section values for adding new custom attributes https://github.com/ManageIQ/manageiq-api/pull/240
+Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
+Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
+Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
+Tasks delete support https://github.com/ManageIQ/manageiq-api/pull/220
+Add custom action support for models https://github.com/ManageIQ/manageiq-api/pull/213
+Do not expand custom actionson collection searches https://github.com/ManageIQ/manageiq-api/pull/204
+custom actions on generic objects https://github.com/ManageIQ/manageiq-api/pull/194
+physical servers refresh https://github.com/ManageIQ/manageiq-api/pull/189
+container_projects collection https://github.com/ManageIQ/manageiq-api/pull/182
+set_current_group for users https://github.com/ManageIQ/manageiq-api/pull/176
+Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
+Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
+Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
+Remove blueprint https://github.com/ManageIQ/manageiq-api/pull/139
+Add security group subcollection actions https://github.com/ManageIQ/manageiq-api/pull/137
+Return image_href and extension for pictures https://github.com/ManageIQ/manageiq-api/pull/127
+Return picture href for generic object subcollections https://github.com/ManageIQ/manageiq-api/pull/126
+encrypt/decrypt for Automate Workspace objects https://github.com/ManageIQ/manageiq-api/pull/124
+Update task description for generic object methods https://github.com/ManageIQ/manageiq-api/pull/118
+Allow update to request task as a subcollection of request https://github.com/ManageIQ/manageiq-api/pull/117
+Allow generic object definition picture to be removed via edit https://github.com/ManageIQ/manageiq-api/pull/116
+Allow service templates to be specified for service orders https://github.com/ManageIQ/manageiq-api/pull/115
+Picture support for Generic Object Definitions 
+Paginate all the things https://github.com/ManageIQ/manageiq-api/pull/113
+Remove equired filters from event streams https://github.com/ManageIQ/manageiq-api/pull/112
+Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
+Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
+add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/pull/100
+Generic object method calling https://github.com/ManageIQ/manageiq-api/pull/93
+set custom attributes on services https://github.com/ManageIQ/manageiq-api/pull/85
+miq_goups on api entrypoint https://github.com/ManageIQ/manageiq-api/pull/84
+Security group subcollection to providers, cloud tenants and vms https://github.com/ManageIQ/manageiq-api/pull/81
+Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
+VMS subcollection to providers https://github.com/ManageIQ/manageiq-api/pull/66
+Event streams API https://github.com/ManageIQ/manageiq-api/pull/65
+Tags subcollection on generic objects https://github.com/ManageIQ/manageiq-api/pull/64
+Update orchestration template subclasses references https://github.com/ManageIQ/manageiq-api/pull/63
+Add/Update/Delete custom attribute for cloud instances https://github.com/ManageIQ/manageiq-api/pull/58
+Generic Objects subcollection https://github.com/ManageIQ/manageiq-api/pull/57
+Generic Objects API https://github.com/ManageIQ/manageiq-api/pull/50
+Allow current group update https://github.com/ManageIQ/manageiq-api/pull/44
+OPTIONS for providers https://github.com/ManageIQ/manageiq-api/pull/43
+OPTIONS generic object definition https://github.com/ManageIQ/manageiq-api/pull/42
+support PUT to generic object definitions https://github.com/ManageIQ/manageiq-api/pull/38
+Generic Object Definition Actions https://github.com/ManageIQ/manageiq-api/pull/37
+Metric rollups subcollection https://github.com/ManageIQ/manageiq-api/pull/33
+Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
+calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
+Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
+Flavors create and delete https://github.com/ManageIQ/manageiq-api/pull/14
+Additional power operations https://github.com/ManageIQ/manageiq-api/pull/11
+Add guest_devices support https://github.com/ManageIQ/manageiq-api/pull/7
+Metrics rollups API https://github.com/ManageIQ/manageiq-api/pull/4
+Add metrics default limit to API settings https://github.com/ManageIQ/manageiq/pull/15797
+Query by multiple tags https://github.com/ManageIQ/manageiq/pull/15557
+rollups_in_range method https://github.com/ManageIQ/manageiq/pull/15549
+Allow operator characters on the RHS of filter https://github.com/ManageIQ/manageiq/pull/15534
+Make namespace into a virtual attribute https://github.com/ManageIQ/manageiq/pull/15532
+Floating IPs https://github.com/ManageIQ/manageiq/pull/15524
+Network Routers https://github.com/ManageIQ/manageiq/pull/15450
+Removed support for Compressed Ids
+Redirect tasks subcollection to request_tasks https://github.com/ManageIQ/manageiq/pull/15357
+Remove miq_server https://github.com/ManageIQ/manageiq/pull/15284
+set_miq_server Action https://github.com/ManageIQ/manageiq/pull/15262
+Add cloud subnet REST API
+Add paging links to the API https://github.com/ManageIQ/manageiq/pull/15148
+Add support for Cloud Volume Delete action https://github.com/ManageIQ/manageiq/pull/15097
+configuration_script_sources subcollection https://github.com/ManageIQ/manageiq/pull/15070
+Return BadRequestError when invalid attributes are specified https://github.com/ManageIQ/manageiq/pull/15040
+Return href on create https://github.com/ManageIQ/manageiq/pull/15005
+Enable custom actions for Vms API https://github.com/ManageIQ/manageiq/pull/14817
+Render DELETE action for notifications https://github.com/ManageIQ/manageiq/pull/14775
+Correctly configure custom attributes for DELETEs https://github.com/ManageIQ/manageiq/pull/14751
+Updated providers refresh to return all tasks for multi-manager providers https://github.com/ManageIQ/manageiq/pull/14747
+Authentications refresh action https://github.com/ManageIQ/manageiq/pull/14717
+Refresh Configuration Script Sources action https://github.com/ManageIQ/manageiq/pull/14714
+Enable edit for all request types https://github.com/ManageIQ/manageiq/pull/14681
+Allow policies to be deleted via DELETE https://github.com/ManageIQ/manageiq/pull/14659
+API support for adding/removing Policies to/from Policy Profiles https://github.com/ManageIQ/manageiq/pull/14575
 |*2.4.0* |/api, /api/v2.4.0 |June 2017 | CRUD on actions,
 Creating and accessing alert actions of alert resources,
 CRUD on Alert Definitions,
