edited catalog item type part with new functionality; removed old screencap

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-cloudformation-template-service-provisioning.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-cloudformation-template-service-provisioning.adoc
@@ -61,7 +61,7 @@ Complete the following procedure to create a new orchestration catalog item.
 . Click *Add*.
 
 [[example-ordering-service]]
-=== Ordering Service
+=== Ordering a Service
 
 Complete the following procedure to order your catalog item from the service catalog.
 
@@ -84,6 +84,6 @@ The provisioning service request is submitted. Once a request has been approved,
 image:7180.png[Catalog_Item_State]
 image:7181.png[Stack_Summary]
 
-You have now deployed instances and associated collection of resources (referred to as stack) using an orchestration template.
+You have now deployed instances and associated collection of resources (referred to as a stack) using an orchestration template.
 
 
