--- a/common/catalog-item-creation.adoc
+++ b/common/catalog-item-creation.adoc
@@ -1,7 +1,7 @@
 . Navigate to menu:Services[Catalogs].
 . Click the *Catalog Items* accordion.
 . Click image:1847.png[](*Configuration*), and then image:1862.png[](*Add a New Catalog Item*).
-. Select the *Catalog Item Type* you are adding. Only providers available to the appliance show in this list. The dialogs that appear will be filtered based on the selected type of provider. 
+. Select the *Catalog Item Type* you are adding. This list only shows items related to providers available or options activated in the appliance (for example, *Ansible Playbook* is available as a *Catalog Item Type* option if the Embedded Ansible server role is enabled on the appliance).
 . In the *Basic Info* subtab:
 .. Type a *Name/Description*.
 .. Check *Display in Catalog* to edit *Catalog*, *Dialog*, and *Entry Point(NS/Cls/Inst)* options.
